--- a/package.json
+++ b/package.json
@@ -345,6 +345,25 @@
 					"type": "boolean",
 					"default": true,
 					"description": "Stop tracking with closing Visual Studio"
+				},
+				"clockify.maxIdleTime": {
+					"type": "number",
+					"default": 300,
+					"description": "The maximum time you are allowed to be idle before a pop-up will ask you if you really were working."
+				},
+				"clockify.telegramApiKey": {
+					"type": "string",
+					"default": "",
+					"description": "When you are idle for the maximum amount of time defined above, a message will be sent via the bot"
+				},
+				"clockify.telegramChatId": {
+					"type": "string",
+					"default": "",
+					"description": "The message will be sent to this group(ID)"
+				},"clockify.telegramUserName": {
+					"type": "string",
+					"default": "",
+					"description": "This user will be tagged"
 				}
 			}
 		}
@@ -361,6 +380,7 @@
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.38.0",
+		"@types/node-telegram-bot-api": "^0.31.1",
 		"glob": "^7.1.4",
 		"mocha": "^6.1.4",
 		"typescript": "^3.3.1",
@@ -369,6 +389,7 @@
 	},
 	"dependencies": {
 		"@types/lodash": "^4.14.138",
+		"@types/node-telegram-bot-api": "^0.31.1",
 		"axios": "^0.19.0",
 		"lodash": "^4.17.15",
 		"moment": "^2.24.0"
